# author-parser

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
tests/: edge_cases.rs  fixtures.rs  parity.rs
tests/fixtures/: cases.json
