[package]
name = "parse-author-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Parse an npm person string (Name <email> (url)) into name, email, and url parts"
license = "MIT"
repository = "https://github.com/hey-jj/parse-author-rs"
readme = "README.md"
keywords = ["author", "package-json", "person", "parser", "npm"]
categories = ["parsing", "parser-implementations"]

[lib]
# The published crate name keeps its suffix, but the import path drops it so
# callers write `use parse_author::parse`.
name = "parse_author"

[dependencies]
# Drives tokenization. The grammar allows mismatched brackets and lazy
# matching whose backtracking is hard to reproduce by hand for every input.
# One compiled pattern gives exact, total parity with the npm person grammar.
regex = "1"
