[package]
name = "author-parser"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
description = "Parse an npm person string (Name <email> (url)) into name, email, and url parts"
license = "MIT"
repository = "https://github.com/hey-jj/author-parser"
readme = "README.md"
keywords = ["author", "package-json", "person", "parser", "npm"]
categories = ["parsing", "parser-implementations"]

[dependencies]
# Drives tokenization. The grammar allows mismatched brackets and lazy
# matching whose backtracking is hard to reproduce by hand for every input.
# One compiled pattern matches the npm person grammar, except whitespace
# trimming uses Rust's `\s` (Unicode White_Space): it trims U+0085 and keeps
# U+FEFF, the reverse of the npm engine.
regex = "1"
